testsuite/tests/ghc-regress/ghci/scripts/1914.script
:set -v1
:! echo "module A where { import B; }" >A.hs
:! echo "module B where { type T = Int; }" >B.hs
-- hack: avoid the need for sleep by using specific timestamps:
:! touch -t 01010000 A.hs
:! touch -t 01010000 B.hs
:load A
:! echo "module A where { import B; oops }" >A.hs
:! touch -t 01010001 A.hs
:reload
-- B should still be loaded
:module *B
:! echo "module A where { import B; }" >A.hs
:! touch -t 01010002 A.hs
:reload
-- should not have to reload B
